@@ -9,13 +9,13 @@ import javafx.scene.Node;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.layout.AnchorPane;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 import org.javatuples.Pair;
 
 import java.io.File;
 import java.net.URL;
+import java.util.Arrays;
 import java.util.ResourceBundle;
 
 public class MainController extends ProfileContentClass {
@@ -27,34 +27,14 @@ public class MainController extends ProfileContentClass {
     public ScrollPane formContainer;
     public ProfileView view;
     public GeneralInfo model;
-
-//    //general info
-//    public TextField surnameField, nameField, patronymicField, nickname;
-//    public ChoiceBox visibilityCB;
-//
-//    //birthdate
-//    public DatePicker birthDatePicker;
-//    public CheckBox isBirthDateShownCB;
-//
-//    //location
-//    public TextField region, city;
-//
-//    //sex and gender
-//    public ChoiceBox sexCB;
-//    public TextField genderField, sexOrientationField;
-//
-//    //studying field and work
-//    public TextField university, workField;
-//    public ChoiceBox hasWorkCB;
-
+    public Button saveButton;
+    public Button resetButton;
     private int currentImage = 0;
     private Stage stage;
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-        model = new GeneralInfo();
-        view = new ProfileView(model);
-        formContainer.setContent(view.getGeneralInfoFormRenderer());
+
     }
 
     @Override
@@ -63,27 +43,29 @@ public class MainController extends ProfileContentClass {
     }
 
     @Override
-    public void setPerson(Person person) {
-        try{
-            this.person = (Person) person.clone();
-            loadPersonInfo();
-        } catch (CloneNotSupportedException e) {
-            e.printStackTrace();
-        }
+    public void setModel(Person person) {
+        this.model = person.getGeneralInfo();
+        loadModelData();
     }
 
-    public void loadPersonInfo() {
-        //TODO: зробити плейсхолдер якщо фото немає
+    @Override
+    public void loadModelData() {
 
-        if(!person.getPhotos().isEmpty()) {
-            imageView.setImage(person.getPhotos().get(0).getValue0());
+        view = new ProfileView(model, saveButton, resetButton);
+        formContainer.setContent(view.getGeneralInfoFormRenderer());
+
+        //TODO: зробити плейсхолдер якщо фото немає
+        if(!model.getPhotos().isEmpty()) {
+            imageView.setImage(model.getPhotos().getFirst().getValue0());
         }
+
+        descriptionArea.textProperty().set(model.getDescription());
+        descriptionArea.textProperty().addListener((observableValue, oldValue, newValue) -> model.setDescription(newValue));
     }
 
     public void loadStage(ActionEvent event) {
         Node node = (Node) event.getSource();
-        Stage stage = (Stage) node.getScene().getWindow();
-        this.stage = stage;
+        this.stage = (Stage) node.getScene().getWindow();
     }
 
     public void loadPhoto(ActionEvent actionEvent) {
@@ -92,10 +74,7 @@ public class MainController extends ProfileContentClass {
         FileChooser fileChooser = new FileChooser();
 
         FileChooser.ExtensionFilter[] extFilters =
-                {new FileChooser.ExtensionFilter("PNG files (*.png)", "*.png"),
-                        new FileChooser.ExtensionFilter("JPG files (*.jpg)", "*.jpg"),
-                        new FileChooser.ExtensionFilter("JPEG files (*.jpeg)", "*.jpeg"),
-                        new FileChooser.ExtensionFilter("BMP files (*.bmp)", "*.bmp")};
+                {new FileChooser.ExtensionFilter("Image files (*.png, *.jpg, *.jpeg, *.bmp)", Arrays.asList("*.png", "*.jpg", "*.jpeg", "*.bmp"))};
         fileChooser.getExtensionFilters().addAll(extFilters);
 
         File selectedFile = fileChooser.showOpenDialog(this.stage);
@@ -106,20 +85,19 @@ public class MainController extends ProfileContentClass {
 
     public void addImage(File file) {
         Image image = new Image(file.toURI().toString());
-        person.getPhotos().add(new Pair<>(image, false));
+        model.getPhotos().add(new Pair<>(image, false));
 
-        switchImage(person.getPhotos().size()-1);
+        switchImage(model.getPhotos().size()-1);
     }
 
     /**
      * @param i pass -1 to remove image
      */
     private void switchImage(int i) {
-        if(person.getPhotos().size() > i && i >= 0) {
-            imageView.setImage(person.getPhotos().get(i).getValue0());
+        if(model.getPhotos().size() > i && i >= 0) {
+            imageView.setImage(model.getPhotos().get(i).getValue0());
             currentImage = i;
-            isPhotoRealCB.setSelected(person.getPhotos().get(i).getValue1());
-            System.out.println(person.getPhotos().get(i).getValue1());
+            isPhotoRealCB.setSelected(model.getPhotos().get(i).getValue1());
         } else if (i == -1) {
             imageView.setImage(null);
             isPhotoRealCB.setSelected(false);
@@ -127,7 +105,7 @@ public class MainController extends ProfileContentClass {
     }
 
     public void nextImage() {
-        if(currentImage < person.getPhotos().size()-1) {
+        if(currentImage < model.getPhotos().size()-1) {
             switchImage(currentImage+1);
         } else {
             switchImage(0);
@@ -138,23 +116,23 @@ public class MainController extends ProfileContentClass {
         if(currentImage > 0) {
             switchImage(currentImage-1);
         } else {
-            switchImage(person.getPhotos().size()-1);
+            switchImage(model.getPhotos().size()-1);
         }
     }
 
     public void setIsPhotoReal() {
-        if(!person.getPhotos().isEmpty()) {
-            Pair pair = person.getPhotos().get(currentImage).setAt1(isPhotoRealCB.isSelected());
-            person.getPhotos().set(currentImage, pair);
+        if(!model.getPhotos().isEmpty()) {
+            Pair<Image, Boolean> pair = model.getPhotos().get(currentImage).setAt1(isPhotoRealCB.isSelected());
+            model.getPhotos().set(currentImage, pair);
         }
     }
 
     public void deleteImage() {
-        if(!person.getPhotos().isEmpty()) {
+        if(!model.getPhotos().isEmpty()) {
 
-            person.getPhotos().remove(currentImage);
+            model.getPhotos().remove(currentImage);
 
-            if (person.getPhotos().isEmpty()) {
+            if (model.getPhotos().isEmpty()) {
                 switchImage(-1);
             } else if(currentImage == 0) {
                 switchImage(0);
@@ -162,5 +140,13 @@ public class MainController extends ProfileContentClass {
                 prevImage();
             }
         }
+    }
+
+    public void saveForm() {
+        view.getGeneralInfoForm().persist();
+    }
+
+    public void clearForm() {
+        view.getGeneralInfoForm().reset();
     }
 }
